--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <img src="https://raw.githubusercontent.com/Arquisoft/dechat_es8/master/src/icon.jpg" alt="DeChates8" height="300" width="600">
+          <img src="icon.png" alt="DeChates8" height="300" width="600">
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
@@ -59,7 +59,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-        <span><img src="https://raw.githubusercontent.com/Arquisoft/dechat_es3b/master/docs/web-app/img/logo.png" alt="DeChates3B" height="65" width="165"></span>
+        <span><img src="icon.png" alt="DeChates8" height="65" width="165"></span>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
@@ -108,7 +108,7 @@
   <!-- Footer -->
   <footer id="footer" class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Dechat_es8</div>
+      <div class="small text-center text-muted">Dechat by Cristian Lado González</div>
     </div>
   </footer>
 
