Logueo que muestra los amigos y desconectarse

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,6 @@
 
 <body id="page-top">
 <div id="principalScreen">
-  <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +31,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
         <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#home"><i class="far fa-comment-alt"></i> Chat</a>
+            <button class="btn js-scroll-trigger" id="login-btn">Login</button>
         </li>
         </ul>
       </div>
@@ -45,9 +44,6 @@
         <div class="col-lg-10 align-self-end">
           <img src="icon.png" alt="DeChates8" height="300" width="600">
         </div>
-        <div class="col-lg-8 align-self-baseline">
-          <a class="btn btn-primary btn-xl js-scroll-trigger" id="login-btn">Login</a>
-        </div>
       </div>
     </div>
   </header>
@@ -55,7 +51,6 @@
 </div>
     
     <div id="chatScreen" style="display: none;">
-        <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
         <span><img src="icon.png" alt="DeChates8" height="65" width="165"></span>
@@ -103,7 +98,6 @@
     
     </div>
 
-  <!-- Footer -->
   <footer id="footer" class="bg-light py-5">
     <div class="container">
       <div class="small text-center text-muted">Dechat by Cristian Lado González</div>
